--- a/Project/style.css
+++ b/Project/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: #ae1515;
 }
 
 .wrapper {
@@ -27,15 +27,15 @@ header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(0, 0%, 0%);
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 49%, 29%);
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(0, 0%, 0%);
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
@@ -50,9 +50,7 @@ header {
   height: 2px;
 }
 
-.card-body {
-  min-height: 100px;
-}
+
 
 .card-footer {
   text-align: center;
@@ -97,7 +95,7 @@ button[disabled] {
   float: right;
 }
 
-#password {
+#passwordDisplay {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -112,10 +110,12 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
+  border: 2px dashed #010101;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
+  background-color: rgb(234, 185, 185);
+  color:hsl(0, 0%, 0%)
 }
 
 @media (max-width: 690px) {
@@ -138,9 +138,10 @@ button[disabled] {
 
 .criteria {
     display: grid;
-    grid-template-columns: repeat(2, 400px);
-    grid-template-rows: 35px;
+    grid-template-columns: repeat(1, 400px);
+    grid-template-rows: 22px;
     margin: 10px;
+    padding: 5px;
 }
 
 .characteramount {
